# ruches-uci

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: algorithms.rs  bitboard.rs  localvec.rs  main.rs  output_mgr.rs  piece.rs  player.rs  prelude.rs  test.rs
src/eval/: mod.rs  s_count_material.rs
src/position/: bitboard.rs  castle.rs  mod.rs  piece.rs  player.rs  types.rs  zobrist.rs
src/position/movegen/: attacks.rs  dests.rs  dyn_attacks.rs  heapvec.rs  localvec.rs  mod.rs  static_attacks.rs
src/position/movegen/attacks/: dyn_attacks.rs  mod.rs  static_attacks.rs
src/position/posTmp/: bitboard.rs
src/position/posTmp/movegen/: localvec.rs
src/search/: basic_minimax.rs  mod.rs
src/tt/: mod.rs
src/uci/: mod.rs
tools/: perft_diff.sh  perftree_assertions.py
