[package]
name = "ruches"
version = "0.1.0"
edition = "2024"
authors = ["Milan Garnier"]

[features]
default = ["perft", "static_attacks"]

perft = []

static_attacks = []

[dependencies]

futures = "0.3"
tokio = { version = "1.42", features = ["full"] }


[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3
debug = true
debug-assertions = false

[profile.dev]
opt-level = 3

[env]
RUST_MIN_STACK = "8388608"
