[package]
name = "ruches"
version = "0.1.0"
edition = "2024"
authors = ["Milan Garnier"]

[features]
default = ["perft", "static_attacks"]

perft = []

static_attacks = []
[dependencies]
futures = "0.3"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time"] }


log = { version = "*", features = ["release_max_level_error"] }
colog = "1.3.0"
enum-iterator = "2.1.0"
env_logger = "0.11.6"
criterion = "0.5.1"

[profile.fixme]
inherits = "dev"
opt-level = 1

[profile.release]
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true

[profile.dev]
opt-level = 3

[profile.bench]
opt-level = 3
debug = true
debug-assertions = false
